Removed app drawer component Fixed scrolling issues on mobile

--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -1,4 +1,5 @@
 .am-tab-bar-bar {
+    transform: translateY(0);
     transition-property: transform;
     will-change: transform;
     &-hidden-bottom {
